--- a/package.json
+++ b/package.json
@@ -15,10 +15,16 @@
   },
   "devDependencies": {
     "@types/node": "17.0.23",
+    "@types/prettier": "^2",
     "@types/react": "18.0.0",
     "@types/react-dom": "18.0.0",
-    "eslint": "8.13.0",
+    "eslint": "^8.13.0",
     "eslint-config-next": "12.1.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.4.0",
+    "prettier": "^2.6.2",
     "typescript": "^4.6.3"
   },
   "packageManager": "yarn@3.2.0"
