--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@types/prettier": "^2",
     "@types/react": "18.0.0",
     "@types/react-dom": "18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
     "eslint": "^8.13.0",
     "eslint-config-next": "12.1.4",
     "eslint-config-prettier": "^8.5.0",
