--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
+    "dom-to-image": "^2.6.0",
+    "file-saver": "^2.0.5",
     "next": "12.1.4",
     "next-redux-wrapper": "^7.0.5",
     "node-sass": "^7.0.1",
@@ -23,6 +25,8 @@
   "devDependencies": {
     "@next/eslint-plugin-next": "latest",
     "@svgr/webpack": "^6.2.1",
+    "@types/dom-to-image": "^2",
+    "@types/file-saver": "^2",
     "@types/node": "17.0.23",
     "@types/prettier": "^2",
     "@types/react": "18.0.0",
