--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@svgr/webpack": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
+    "@types/jest": "^27.5.1",
     "@types/node": "17.0.23",
     "@types/prettier": "^2",
     "@types/react": "18.0.0",
@@ -43,6 +44,7 @@
     "jest-environment-jsdom": "^28.1.0",
     "lint-staged": "^12.3.7",
     "prettier": "^2.6.2",
+    "ts-jest": "^28.0.2",
     "typescript": "^4.6.3"
   },
   "packageManager": "yarn@3.2.0",
