[typo]: 테스트용 CI 코드 수정

--- a/.github/workflows/test-every-push.yml
+++ b/.github/workflows/test-every-push.yml
@@ -15,3 +15,9 @@ jobs:
 
       - name: Install Dependencies
         run: yarn install
+
+      - run: yarn run lint
+        if: ${{ always() }}
+
+      - run: yarn run tsc
+        if: ${{ always() }}
