[CI]: main workflow slack-notify 반영

--- a/.github/workflows/test-every-push.yml
+++ b/.github/workflows/test-every-push.yml
@@ -21,3 +21,19 @@ jobs:
 
       - run: yarn run tsc
         if: ${{ always() }}
+
+      - run: yarn run build
+        if: ${{ always() }}
+
+      - name: Send slack when failed
+        if: ${{ failure() }}
+        uses: ./.github/actions/slack-notify
+        with:
+          slack_incoming_url: ${{ secrets.SLACK_INCOMING_URL }}
+
+      - name: Send slack if completed
+        if: ${{ success() }}
+        uses: ./.github/actions/slack-notify
+        with:
+          status: success
+          slack_incoming_url: ${{ secrets.SLACK_INCOMING_URL }}
