--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -7,8 +7,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  test:
-    name: Test lint, tsc, build
+  lint-format:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -16,25 +15,49 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ secrets.NODE_VERSION }}
-
-      - name: Install Dependencies
-        run: yarn install
-
-      - run: yarn run lint
+      - name: Run Lint
+        run: yarn run lint
         if: ${{ always() }}
-
-      - run: yarn run tsc
+  type-check:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ secrets.NODE_VERSION }}
+      - name: Check types
+        run: tsc -p tsconfig.json --noEmit
         if: ${{ always() }}
-
-      - name: Send slack when failed
-        if: ${{ failure() }}
-        uses: ./.github/actions/slack-notify
+  unit-test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v2
         with:
-          slack_incoming_url: ${{ secrets.SLACK_INCOMING_URL }}
-
-      - name: Send slack if completed
-        if: ${{ success() }}
-        uses: ./.github/actions/slack-notify
+          node-version: ${{ secrets.NODE_VERSION }}
+      - name: Run Test
+        run: yarn test:ci
+        if: ${{ always() }}
+  send-slack:
+    runs-on: ubuntu-latest
+    needs: [lint-format, type-check, unit-test]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v2
         with:
-          status: success
-          slack_incoming_url: ${{ secrets.SLACK_INCOMING_URL }}
+          node-version: ${{ secrets.NODE_VERSION }}
+    
+    - name: Send slack when failed
+      if: ${{ failure() }}
+      uses: ./.github/actions/slack-notify
+      with:
+        slack_incoming_url: ${{ secrets.SLACK_INCOMING_URL }}
+    - name: Send slack if completed
+      if: ${{ success() }}
+      uses: ./.github/actions/slack-notify
+      with:
+        status: success
+        slack_incoming_url: ${{ secrets.SLACK_INCOMING_URL }}
