--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -3,8 +3,21 @@ name: 'CI'
 on: push
 
 jobs:
+  install-dependencies:
+    name: Install Dependencies
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ secrets.NODE_VERSION }}
+      - name: Install Dependencies:
+        run: yarn install
+      
   lint-format:
     runs-on: ubuntu-latest
+    needs: [install-dependencies]
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js
@@ -16,6 +29,7 @@ jobs:
         if: ${{ always() }}
   type-check:
     runs-on: ubuntu-latest
+    needs: [install-dependencies]
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js
@@ -27,6 +41,7 @@ jobs:
         if: ${{ always() }}
   unit-test:
     runs-on: ubuntu-latest
+    needs: [install-dependencies]
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js
@@ -36,3 +51,23 @@ jobs:
       - name: Run Test
         run: yarn test:ci
         if: ${{ always() }}
+  send-slack:
+      runs-on: ubuntu-latest
+      needs: [lint-format, type-check, unit-test]
+      steps:
+        - uses: actions/checkout@v2
+        - name: Use Node.js
+          uses: actions/setup-node@v2
+          with:
+            node-version: ${{ secrets.NODE_VERSION }}      
+        - name: Send slack when failed
+          if: ${{ failure() }}
+          uses: ./.github/actions/slack-notify
+          with:
+            slack_incoming_url: ${{ secrets.SLACK_INCOMING_URL }}
+        - name: Send slack if completed
+          if: ${{ success() }}
+          uses: ./.github/actions/slack-notify
+          with:
+            status: success
+            slack_incoming_url: ${{ secrets.SLACK_INCOMING_URL }}
