--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,9 +12,9 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ secrets.NODE_VERSION }}
-      - name: Install Dependencies:
+      - name: Install Dependencies
         run: yarn install
-      
+
   lint-format:
     runs-on: ubuntu-latest
     needs: [install-dependencies]
@@ -52,22 +52,22 @@ jobs:
         run: yarn test:ci
         if: ${{ always() }}
   send-slack:
-      runs-on: ubuntu-latest
-      needs: [lint-format, type-check, unit-test]
-      steps:
-        - uses: actions/checkout@v2
-        - name: Use Node.js
-          uses: actions/setup-node@v2
-          with:
-            node-version: ${{ secrets.NODE_VERSION }}      
-        - name: Send slack when failed
-          if: ${{ failure() }}
-          uses: ./.github/actions/slack-notify
-          with:
-            slack_incoming_url: ${{ secrets.SLACK_INCOMING_URL }}
-        - name: Send slack if completed
-          if: ${{ success() }}
-          uses: ./.github/actions/slack-notify
-          with:
-            status: success
-            slack_incoming_url: ${{ secrets.SLACK_INCOMING_URL }}
+    runs-on: ubuntu-latest
+    needs: [lint-format, type-check, unit-test]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ secrets.NODE_VERSION }}
+      - name: Send slack when failed
+        if: ${{ failure() }}
+        uses: ./.github/actions/slack-notify
+        with:
+          slack_incoming_url: ${{ secrets.SLACK_INCOMING_URL }}
+      - name: Send slack if completed
+        if: ${{ success() }}
+        uses: ./.github/actions/slack-notify
+        with:
+          status: success
+          slack_incoming_url: ${{ secrets.SLACK_INCOMING_URL }}
