--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -3,8 +3,7 @@ name: 'CI'
 on: push
 
 jobs:
-  install-dependencies:
-    name: Install Dependencies
+  continuous-integration:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -14,52 +13,15 @@ jobs:
           node-version: ${{ secrets.NODE_VERSION }}
       - name: Install Dependencies
         run: yarn install
-
-  lint-format:
-    runs-on: ubuntu-latest
-    needs: [install-dependencies]
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ secrets.NODE_VERSION }}
       - name: Run Lint
         run: yarn run lint
         if: ${{ always() }}
-  type-check:
-    runs-on: ubuntu-latest
-    needs: [install-dependencies]
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ secrets.NODE_VERSION }}
       - name: Check types
-        run: tsc -p tsconfig.json --noEmit
+        run: yarn run tsc
         if: ${{ always() }}
-  unit-test:
-    runs-on: ubuntu-latest
-    needs: [install-dependencies]
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ secrets.NODE_VERSION }}
       - name: Run Test
         run: yarn test:ci
         if: ${{ always() }}
-  send-slack:
-    runs-on: ubuntu-latest
-    needs: [lint-format, type-check, unit-test]
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ secrets.NODE_VERSION }}
       - name: Send slack when failed
         if: ${{ failure() }}
         uses: ./.github/actions/slack-notify
